# Vartul

./: .gitignore  ARCHITECTURE.md  README.md  RUNNING.md  package-lock.json
Backend/: .gitignore  Server.js  package-lock.json  package.json
Backend/Blockchain/: EngagementContract.js  IpfsService.js  Solana.js  TokenService.js
Backend/Config/: redis.js
Backend/Controllers/: EngagementController.js  FollowController.js  GovernanceController.js  Messagecontroller.js  Postcontroller.js  Reelcontroller.js  Storycontroller.js  Usercontroller.js
Backend/Middelwares/: upload.js
Backend/Models/: Conversation.js  CreatorStake.js  Engagement_Model.js  Follow.js  Post_model.js  Proposal.js  Reel_Model.js  Story_Model.js  Tip.js  TransactionLog.js  User.js
Backend/Utils/: mlService.js  redishelper.js
Backend/routes/: Chatroute.js  EngagementRoute.js  GovernanceRoute.js  MlRoute.js  PostRoute.js  Reelrouter.js  Stroyrouter.js  UserRoute.js
Backend/scripts/: addTokenMetadata.js  checkAndFundPlatform.js  checkPlatformWallet.js  migrateFollowData.js  setupDevnetToken.js  testAirdrop.js
Frontend/: .gitignore  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  (+1 more)
SmartContracts/vartul_engagement/: .gitignore  Cargo.toml  rust-toolchain.toml  rust-toolchain.toml.save
SmartContracts/vartul_engagement/src/: lib.rs
Vartul_ML/: .gitignore  1773666452049_vartul_dataset_syn.xlsx  Run_all.py  bot_detection_demo.py  demo_bot_behavior.py  ml_api.py  model1_engagement.py  model2.pkl  model2_bot_detection.py  model3.pkl  model3_feed_ranking.py  utils.py
(+76 files in other folders)
