[package]
name = "vartul_engagement"
version = "0.1.0"
description = "Vartul Platform — Proof-of-Stake Engagement Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vartul_engagement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }

[profile.release]
overflow-checks = true
lto = "thin"